# furiosa-mre

./: Cargo.toml  README.md
dump/: lir_plot.json  rlir_plot.json  summary.json
dump/dot/: edf.dot  lir.dot
dump/fir/: lir.fir
dump/json/: lir_ir_viewer.json
src/: beam.rs  cluster_tile.rs  cluster_tile_v2.rs  dm_to_dm.rs  lib.rs  multiuse.rs  slice_padding.rs  slice_padding_v2.rs  tile.rs  tile_hbm.rs  typecheck_collect_kernel.rs
src/behavior/: mod.rs  runner.rs  tile_index.rs
src/codegen/: cluster_tile.rs  cluster_tile_v2.rs  empty_loop.rs  large_loop.rs  mod.rs  multiuse.rs  padding_in_lane.rs  padding_in_slice.rs  padding_in_slice_v2.rs  tile_hbm.rs  tile_hbm_index.rs  tile_index_evaluation.rs
src/hang/: switching_padding_into_slice.rs
src/scheduler/: expression_index_in_loop.rs  mod.rs
src/solved/: large_loop.rs  multiuse.rs  padding_in_lane.rs  switch_in_loop.rs  tile_index_evaluation.rs
src/typecheck/: typecheck_collect.rs  typecheck_collect_kernel.rs
