[package]
name = "mre"
version = "0.1.0"
edition = "2024"
publish = false

[package.metadata.furiosa-opt]

[workspace]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(backend, values("simulation", "emulation", "npu", "typecheck"))', 'cfg(furiosa_opt)'] }

[lib]
path = "src/lib.rs"

[[bin]]
name = "tile"
path = "src/behavior/runner.rs"


[dependencies]
furiosa-opt-std = { path = "../furiosa-opt-std" }
tokio = { version = "1.29", features = ["rt", "rt-multi-thread", "sync", "macros"] }
